--- a/projects/ts-etl-ui/src/load-summary/load-summary.component.html
+++ b/projects/ts-etl-ui/src/load-summary/load-summary.component.html
@@ -35,4 +35,4 @@
   </table>
 </fieldset>
 
-<app-version-qa-rules [qaRules]="loadSummary.qaRules"></app-version-qa-rules>
+<app-load-version-qa-rules [qaRules]="loadSummary.qaRules"></app-load-version-qa-rules>
