--- a/projects/ts-etl-ui/src/load-version-qa-activity/load-version-activity.component.html
+++ b/projects/ts-etl-ui/src/load-version-qa-activity/load-version-activity.component.html
@@ -7,7 +7,8 @@
         <mat-icon fontIcon="file_download"></mat-icon>
       </button>
     </div>
-    <table data-testid="qaActivitiesTable" #activitiesTable mat-table [dataSource]="dataSource()" matSort multiTemplateDataRows>
+    <table data-testid="qaActivitiesTable" #activitiesTable mat-table [dataSource]="dataSource()" matSort
+           multiTemplateDataRows>
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>Activity ID</th>
         <td mat-cell *matCellDef="let element"> {{element.id}}</td>
@@ -69,7 +70,7 @@
         <td class="bg-gray-100" mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
           <div class="example-element-detail" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
             <div class="example-element-description" *ngIf="expandedElement === row">
-              <app-version-qa-note [versionQaNotes]="row.notes"></app-version-qa-note>
+              <app-load-version-qa-note [versionQaNotes]="row.notes"></app-load-version-qa-note>
             </div>
           </div>
         </td>
