--- a/projects/ts-etl-ui/src/load-version/load-version.component.html
+++ b/projects/ts-etl-ui/src/load-version/load-version.component.html
@@ -140,7 +140,7 @@
                   <app-load-summary [loadSummary]="row.loadSummary"></app-load-summary>
                   <h1>QA Actions</h1>
                   <fieldset>
-                    <a [routerLink]="['/load-version-qa-report', row.requestId]">Go to QA Report</a>
+                    <a [routerLink]="['/load-version-report', row.requestId]">Go to QA Report</a>
                     <span class="block">
                     <a [routerLink]="['/code-system-data', row.codeSystemName]">Analyze Code System Data</a>
                   </span>
@@ -156,9 +156,10 @@
                   <legend>QA Acceptance</legend>
                   <app-load-version-acceptance-actions [versionQA]="row" (actionOutput)="action($event,row)">
                   </app-load-version-acceptance-actions>
-                  <app-load-version-qa-add-note [versionQA]="row" class="float-right"
-                                                (actionOutput)="refreshActivityTable()"></app-load-version-qa-add-note>
-                  <app-load-version-activity [versionQaActivities]="row.versionQaActivities" [requestId]="row.requestId"
+                  <app-load-version-add-note [versionQA]="row" class="float-right"
+                                             (actionOutput)="refreshActivityTable()"></app-load-version-add-note>
+                  <app-load-version-activity [loadVersionActivities]="row.loadVersionActivities"
+                                             [requestId]="row.requestId"
                                              class="flex flex-grow"></app-load-version-activity>
                 </fieldset>
               </div>
