--- a/projects/ts-etl-ui/src/load-version-note/load-version-note.component.html
+++ b/projects/ts-etl-ui/src/load-version-note/load-version-note.component.html
@@ -1,4 +1,4 @@
-<table class="mat-elevation-z8 my-3" mat-table [dataSource]="versionQaNotes" matSort>
+<table class="mat-elevation-z8 my-3" mat-table [dataSource]="loadVersionNotes" matSort>
   <caption>Notes</caption>
   <ng-container matColumnDef="tags">
     <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Tags</th>
