--- a/projects/ts-etl-ui/src/load-version-activity/load-version-activity.component.html
+++ b/projects/ts-etl-ui/src/load-version-activity/load-version-activity.component.html
@@ -70,7 +70,7 @@
         <td class="bg-gray-100" mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
           <div class="example-element-detail" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
             <div class="example-element-description" *ngIf="expandedElement === row">
-              <app-load-version-note [versionQaNotes]="row.notes"></app-load-version-note>
+              <app-load-version-note [loadVersionNotes]="row.notes"></app-load-version-note>
             </div>
           </div>
         </td>
