Add Reset Button

--- a/projects/ts-etl-ui/src/load-version-acceptance-actions/load-version-acceptance-actions.component.html
+++ b/projects/ts-etl-ui/src/load-version-acceptance-actions/load-version-acceptance-actions.component.html
@@ -2,3 +2,6 @@
   <button mat-raised-button color="primary" (click)="action('Accept')">Accept</button>
   <button mat-raised-button color="warn" (click)="action('Reject')">Reject</button>
 </ng-container>
+<ng-container *ngIf="['Accepted', 'Rejected'].includes(loadVersion.versionStatus)">
+  <button mat-raised-button color="primary" (click)="action('Reset')">Reset</button>
+</ng-container>
