--- a/projects/ts-etl-ui/src/load-version-activity/load-version-activity.component.html
+++ b/projects/ts-etl-ui/src/load-version-activity/load-version-activity.component.html
@@ -60,19 +60,8 @@
 
       <ng-container matColumnDef="nbNotes">
         <th mat-header-cell *matHeaderCellDef> # of Notes</th>
-        <td mat-cell *matCellDef="let element"
-            (click)="expandedElement = expandedElement === element ? null : element">
+        <td mat-cell *matCellDef="let element">
           {{element.notes.length}}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="expandedDetail">
-        <td class="bg-gray-100" mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
-          <div class="example-element-detail" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
-            <div class="example-element-description" *ngIf="expandedElement === row">
-              <app-load-version-note [loadVersionNotes]="row.notes"></app-load-version-note>
-            </div>
-          </div>
         </td>
       </ng-container>
 
@@ -84,14 +73,8 @@
         </td>
       </tr>
 
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-          class="example-element-row"
-          [class.example-expanded-row]="expandedElement === row"
-          (click)="expandedElement = expandedElement === row ? null : row">
-      </tr>
-
-      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="example-element-row"></tr>
+      
     </table>
   </fieldset>
 </div>
