--- a/projects/ts-etl-ui/src/load-version/load-version.component.html
+++ b/projects/ts-etl-ui/src/load-version/load-version.component.html
@@ -156,11 +156,9 @@
                   <legend>QA Acceptance</legend>
                   <div class="flex flex-col">
                     <div class="flex justify-between">
-                      <app-load-version-acceptance-actions [loadVersion]="row"></app-load-version-acceptance-actions>
-                      <app-load-version-add-note [loadVersion]="row"></app-load-version-add-note>
+                      <button mat-raised-button (click)="addSomething()">add something</button>
                     </div>
-                    <app-load-version-activity [loadVersion]="row"></app-load-version-activity>
-                    <app-load-version-note [loadVersion]="row"></app-load-version-note>
+                    <app-load-version-note [loadVersion]="a()"></app-load-version-note>
                   </div>
                 </fieldset>
               </div>
