--- a/projects/ts-etl-ui/src/load-version/load-version.component.html
+++ b/projects/ts-etl-ui/src/load-version/load-version.component.html
@@ -134,10 +134,10 @@
                  *ngIf="expandedElement === row">
               <div class="flex">
                 <div class="m-2" style="flex-grow:0.35">
-                  <app-load-version-detail [loadVersion]="row" class="flex flex-grow"></app-load-version-detail>
+                  <!--                  <app-load-version-detail [loadVersion]="row" class="flex flex-grow"></app-load-version-detail>-->
                 </div>
                 <div style="flex-grow:0.65">
-                  <app-load-summary [loadSummary]="row.loadSummary"></app-load-summary>
+                  <!--                  <app-load-summary [loadSummary]="row.loadSummary"></app-load-summary>-->
                   <h1>QA Actions</h1>
                   <fieldset>
                     <a [routerLink]="['/load-version-report', row.requestId]">Go to QA Report</a>
@@ -156,9 +156,11 @@
                   <legend>QA Acceptance</legend>
                   <div class="flex flex-col">
                     <div class="flex justify-between">
-                      <button mat-raised-button (click)="addSomething()">add something</button>
+                      <app-load-version-acceptance-actions [loadVersion]="row"></app-load-version-acceptance-actions>
+                      <button mat-raised-button color="primary" (click)="openAddNote(row)">Add Note</button>
                     </div>
-                    <app-load-version-note [loadVersion]="a()"></app-load-version-note>
+                    <app-load-version-activity [loadVersion]="row"></app-load-version-activity>
+                    <app-load-version-note [loadVersion]="row"></app-load-version-note>
                   </div>
                 </fieldset>
               </div>
