--- a/projects/ts-etl-ui/src/load-version/load-version.component.html
+++ b/projects/ts-etl-ui/src/load-version/load-version.component.html
@@ -134,10 +134,10 @@
                  *ngIf="expandedElement === row">
               <div class="flex">
                 <div class="m-2" style="flex-grow:0.35">
-                  <!--                  <app-load-version-detail [loadVersion]="row" class="flex flex-grow"></app-load-version-detail>-->
+                  <app-load-version-detail [loadVersion]="row" class="flex flex-grow"></app-load-version-detail>
                 </div>
-                <div style="flex-grow:0.65">
-                  <!--                  <app-load-summary [loadSummary]="row.loadSummary"></app-load-summary>-->
+                <div class="grow-[0.65]">
+                  <app-load-summary [loadSummary]="row.loadSummary"></app-load-summary>
                   <h1>QA Actions</h1>
                   <fieldset>
                     <a [routerLink]="['/load-version-report', row.requestId]">Go to QA Report</a>
