--- a/projects/ts-etl-ui/src/load-version/load-version.component.html
+++ b/projects/ts-etl-ui/src/load-version/load-version.component.html
@@ -136,7 +136,7 @@
                 <div class="m-2" style="flex-grow:0.35">
                   <app-load-version-detail [loadVersion]="row" class="flex flex-grow"></app-load-version-detail>
                 </div>
-                <div style="flex-grow:0.65">
+                <div class="grow-[0.65]">
                   <app-load-summary [loadSummary]="row.loadSummary"></app-load-summary>
                   <h1>QA Actions</h1>
                   <fieldset>
@@ -151,18 +151,17 @@
                   </fieldset>
                 </div>
               </div>
-              <div class="flex" style="flex-grow:1">
+              <div class="flex grow">
                 <fieldset>
                   <legend>QA Acceptance</legend>
                   <div class="flex flex-col">
                     <div class="flex justify-between">
                       <app-load-version-acceptance-actions [loadVersion]="row" (actionOutput)="action($event,row)">
                       </app-load-version-acceptance-actions>
-                      <app-load-version-add-note [loadVersion]="row"
-                                                 (actionOutput)="refreshActivityTable()"></app-load-version-add-note>
+                      <button mat-raised-button color="primary" (click)="openAddNoteModal(row)">Add Note</button>
                     </div>
-                    <app-load-version-activity [loadVersionActivities]="row.loadVersionActivities"
-                                               [requestId]="row.requestId"></app-load-version-activity>
+                    <app-load-version-activity [loadVersion]="row"></app-load-version-activity>
+                    <app-load-version-note [loadVersion]="row"></app-load-version-note>
                   </div>
                 </fieldset>
               </div>
