Load Version Search RequestID/Requester

--- a/projects/ts-etl-ui/src/load-version/load-version.component.html
+++ b/projects/ts-etl-ui/src/load-version/load-version.component.html
@@ -1,6 +1,10 @@
 <form [formGroup]="searchCriteria">
   <div class="mat-elevation-z8">
     <div class="example-table-container">
+      <button mat-fab color="primary" type="submit" class="hidden">
+        <mat-icon fontIcon="search"></mat-icon>
+        Search
+      </button>
       <table mat-table [dataSource]="data" class="example-table" multiTemplateDataRows
              matSort matSortActive="requestId" matSortDisableClear matSortDirection="asc">
         <ng-container matColumnDef="codeSystemName">
