--- a/projects/ts-etl-ui/src/load-version/load-version.component.html
+++ b/projects/ts-etl-ui/src/load-version/load-version.component.html
@@ -46,7 +46,7 @@
         <ng-container matColumnDef="loadNumber-search">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col m-2">
-              <input id="loadNumberFilterInput" class="w-3/4" matInput formControlName="loadNumber"
+              <input id="loadNumberFilterInput" class="w-32" matInput formControlName="loadNumber"
                      placeholder="search" size="4" type="number">
             </div>
           </th>
@@ -61,7 +61,7 @@
         <ng-container matColumnDef="versionStatus-search">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col m-2">
-              <select id="versionStatusFilterInput" class="w-25" formControlName="versionStatus">
+              <select id="versionStatusFilterInput" class="w-24" formControlName="versionStatus">
                 <option value="">ALL</option>
                 <option *ngFor="let status of VERSION_STATUSES">{{status}}</option>
               </select>
