Load Version Search RequestID/Requester (#220)
* Load Version Search RequestID/Requester

* Load Version - Search Version

* Load Version - Search Version Status

* Load Version - Search Version Load Number

---------

Co-authored-by: Ludet <ludetc@nih.gov>

--- a/projects/ts-etl-ui/src/load-version/load-version.component.html
+++ b/projects/ts-etl-ui/src/load-version/load-version.component.html
@@ -1,6 +1,10 @@
 <form [formGroup]="searchCriteria">
   <div class="mat-elevation-z8">
     <div class="example-table-container">
+      <button mat-fab color="primary" type="submit" class="hidden">
+        <mat-icon fontIcon="search"></mat-icon>
+        Search
+      </button>
       <table mat-table [dataSource]="data" class="example-table" multiTemplateDataRows
              matSort matSortActive="requestId" matSortDisableClear matSortDirection="asc">
         <ng-container matColumnDef="codeSystemName">
@@ -42,7 +46,7 @@
         <ng-container matColumnDef="loadNumber-search">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col m-2">
-              <input id="loadNumberFilterInput" class="w-3/4" matInput formControlName="loadNumber"
+              <input id="loadNumberFilterInput" class="w-32" matInput formControlName="loadNumber"
                      placeholder="search" size="4" type="number">
             </div>
           </th>
@@ -57,8 +61,10 @@
         <ng-container matColumnDef="versionStatus-search">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col m-2">
-              <input id="versionStatusFilterInput" class="w-3/4" matInput formControlName="versionStatus"
-                     placeholder="search" size="4">
+              <select id="versionStatusFilterInput" class="w-24" formControlName="versionStatus">
+                <option value="">ALL</option>
+                <option *ngFor="let status of VERSION_STATUSES">{{status}}</option>
+              </select>
             </div>
           </th>
         </ng-container>
