--- a/projects/ts-etl-ui/src/load-version/load-version.component.html
+++ b/projects/ts-etl-ui/src/load-version/load-version.component.html
@@ -78,10 +78,10 @@
         <ng-container matColumnDef="loadTime-search">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col m-2">
-              <input id="loadTimeStartTime" matInput class="w-30" formControlName="loadTimeStartTime" type="date"
-                     [max]="searchCriteria.get('loadTimeEndTime')?.getRawValue()">
-              <input id="loadTimeEndTime" matInput class="w-30" formControlName="loadTimeEndTime" type="date"
-                     [min]="searchCriteria.get('loadTimeStartTime')?.getRawValue()">
+              <input id="loadStartTime" matInput class="w-30" formControlName="loadStartTime" type="date"
+                     [max]="searchCriteria.get('loadEndTime')?.getRawValue()">
+              <input id="loadEndTime" matInput class="w-30" formControlName="loadEndTime" type="date"
+                     [min]="searchCriteria.get('loadStartTime')?.getRawValue()">
             </div>
           </th>
         </ng-container>
