--- a/projects/ts-etl-ui/src/load-version-report/load-version-report.component.scss
+++ b/projects/ts-etl-ui/src/load-version-report/load-version-report.component.scss
@@ -12,7 +12,14 @@ dl {
   dt, dd {
     display: flex;
     margin: 0;
-    flex: 1 1 0
+  }
+
+  dt {
+    flex-basis: 30%
+  }
+
+  dd {
+    flex-basis: 70%
   }
 
   dt {
