--- a/projects/ts-etl-ui/src/load-version-report/load-version-report.component.html
+++ b/projects/ts-etl-ui/src/load-version-report/load-version-report.component.html
@@ -74,6 +74,73 @@
           Verification
         </mat-panel-title>
       </mat-expansion-panel-header>
+      <fieldset *ngIf="verificationSummary$ | async as verificationSummary">
+        <legend>Summary</legend>
+        <table>
+          <thead>
+          <tr>
+            <th>Total Rules</th>
+            <th>Rules with Data</th>
+            <th>Error</th>
+            <th>MessageGroup Count Warning</th>
+            <th>Info</th>
+            <th>Action</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td>{{verificationSummary.totalRules}}</td>
+            <td>{{verificationSummary.rulesWithData}}</td>
+            <td>{{verificationSummary.error}}</td>
+            <td>{{verificationSummary.messageGroupCountWarning}}</td>
+            <td>{{verificationSummary.info}}</td>
+            <td>
+              <mat-checkbox></mat-checkbox>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </fieldset>
+      <fieldset *ngIf="verificationQARules$ | async as verificationQARules">
+        <legend>QA Rules</legend>
+        <table mat-table [dataSource]="verificationQARules">
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Rule Name</th>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+          </ng-container>
+          <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef>Rule Description</th>
+            <td mat-cell *matCellDef="let element">{{element.description}}</td>
+          </ng-container>
+          <ng-container matColumnDef="dataAvailable">
+            <th mat-header-cell *matHeaderCellDef>Data Available</th>
+            <td mat-cell *matCellDef="let element">{{element.dataAvailable}}</td>
+          </ng-container>
+          <ng-container matColumnDef="messagesGroupCount">
+            <th mat-header-cell *matHeaderCellDef colspan="3">Message Group Count</th>
+            <ng-container *matCellDef="let element">
+              <td mat-cell [ngClass]="element.messagesGroupCount.numOfError>0?'text-red-700':''">
+                <mat-icon fontIcon="error" class="scale-25"></mat-icon>
+                {{element.messagesGroupCount.numOfError}}
+              </td>
+              <td mat-cell
+                  [ngClass]="element.messagesGroupCount.numOfError>0?'text-orange-700':''">
+                <mat-icon fontIcon="warning"></mat-icon>
+                {{element.messagesGroupCount.numOfWarning}}</td>
+              <td mat-cell>{{element.messagesGroupCount.numOfInfo}}</td>
+            </ng-container>
+          </ng-container>
+          <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef>Action</th>
+            <td mat-cell *matCellDef="let element">
+              <mat-checkbox></mat-checkbox>
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="verificationQARulesColumn"></tr>
+          <tr mat-row *matRowDef="let row; columns: verificationQARulesColumn;"></tr>
+        </table>
+      </fieldset>
     </mat-expansion-panel>
 
     <mat-expansion-panel expanded="true" togglePosition="before">
